Modify mobile text size

--- a/index.html
+++ b/index.html
@@ -29,10 +29,22 @@
         <div class="logo">
           <a href="index.html"><img src="./resources/images/logo.png"/></a>
         </div>
-        <div class="button">
+
+        <div class="logo-tablet">
+          <a href="index.html"><img src="./resources/images/logo.png"/></a>
+        </div>
+
+        <div class="button-desktop">
             <a href="#"><div class="btn-portfolio">portfolio</div></a>
             <a href="#"><div class="btn-about-cv">about + cv</div></a>
             <a href="#"><div class="btn-contact">contact</div></a>
+            <div class="language"><a href"#"><span class="english">EN</span></a>/<a href"#"><span class="mandarin">TW</span></a></div>
+        </div>
+
+        <div class="button-tablet">
+            <a href="#"><div class="btn-portfolio-tablet">portfolio</div></a>
+            <a href="#"><div class="btn-about-cv-tablet">about + cv</div></a>
+            <a href="#"><div class="btn-contact-tablet">contact</div></a>
             <div class="language"><a href"#"><span class="english">EN</span></a>/<a href"#"><span class="mandarin">TW</span></a></div>
         </div>
     </header>
