Modify mobile text size

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div class="button-desktop">
             <a href="#"><div class="btn-portfolio">portfolio</div></a>
-            <a href="#"><div class="btn-about-cv">about + cv</div></a>
+            <a href="index.html"><div class="btn-about-cv">about + cv</div></a>
             <a href="#"><div class="btn-contact">contact</div></a>
             <div class="language"><a href"#"><span class="english">EN</span></a>/<a href"#"><span class="mandarin">TW</span></a></div>
         </div>
