--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>yi-hsien hung</title>
+    <title>Yi-Hsien Hung</title>
     <link rel="icon" href="favicon.png" type="image/x-icon">
 
     <!-- Google Fonts -->
@@ -43,7 +43,7 @@
 
         <div class="button-tablet">
             <a href="#"><div class="btn-portfolio-tablet">portfolio</div></a>
-            <a href="#"><div class="btn-about-cv-tablet">about + cv</div></a>
+            <a href="index.html"><div class="btn-about-cv-tablet">about + cv</div></a>
             <a href="#"><div class="btn-contact-tablet">contact</div></a>
             <div class="language"><a href"#"><span class="english">EN</span></a>/<a href"#"><span class="mandarin">TW</span></a></div>
         </div>
