--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <div class="language"><a href"#"><span class="english">EN</span></a>/<a href"#"><span class="mandarin">TW</span></a></div>
         </div>
 
+        <!-- button tablet -->
         <div class="button-tablet">
             <a href="#"><div class="btn-portfolio-tablet">portfolio</div></a>
             <a href="index.html"><div class="btn-about-cv-tablet">about + cv</div></a>
@@ -71,75 +72,78 @@
 
     <!-- content -->
     <section class="content">
-      <h2 class="intro">Born in 1990, Taoyuan, Taiwan, Yi-Hsien Hung is a graphic designer, visual artist, illustrator based in the Netherlands.</h2>
-      <p class="quote">Yi-Hsien is experienced with illustration, watercolour painting, visual identity, packaging design, editorial design, typography, typeface design, web design, user interface design.</p>
-      <div class="cv">
-        <h3>Experience</h3>
-        <ul>
-          <li>
-            <p>2017 - present | <strong>design collaboration</strong>, Staatsbosbeheer</p>
-            <p class="sub">Designing map of forest</p>
-          </li>
-          <li>
-            <p>2014 - 2015 | <strong>assistant specialist (typeface design)</strong>, DynaComware</p>
-            <p class="sub">Designing Kanji typeface</p>
-          </li>
-          <li>
-            <p>2014 - 2014 | <strong>part-time employee</strong>, Department of Design, National Taiwan Normal University</p>
-            <p class="sub">Translation of the website of Department of Design (Chinese – English)</p>
-          </li>
-          <li>
-            <p>2013 - 2014 | <strong>part-time employee</strong>, Straits Design Talent Developing Project</p>
-            <p class="sub">Collecting and translating information about international design competitions (English – Chinese, German – Chinese)</p>
-            <p class="sub">Making registration instructions for international design competitions</p>
-          </li>
-          <li>
-            <p>2011 - 2012 | <strong>part-time employee</strong>, Department of Design, National Taiwan Normal University</p>
-            <p class="sub">Translation of design exhibitions and course structure</p>
-            <p class="sub">Office work</p>
-          </li>
-        </ul>
-        <h3>Education</h3>
-        <ul>
-          <li>
-            <p>2015 - 2017 | <strong>Master of Graphic Design</strong>, Akademie voor Kunst en Vormgeving St. Joost, Netherlands</p>
-          </li>
-          <li>
-            <p>2010 - 2014 | <strong>Bachelor of Fine Arts (Department of Design)</strong>, National Taiwan Normal University, Taiwan</p>
-          </li>
-          <li>
-            <p>2006 - 2008, 2009 - 2010 | <strong>Senior High School Diploma (Art specialised class)</strong>, National Yang-Ming Senior High School, Taiwan</p>
-          </li>
-          <li>
-            <p>2008 - 2009 | <strong>AS Level (Fine Art, Graphic Design, Mathematics, Geography)</strong>, Durham Sixth Form Centre, United Kingdom</p>
-          </li>
-        </ul>
-        <h3>Volunteer Experience</h3>
-        <ul>
-          <li>
-            <p>09.2017 - 10.2017 | <strong>volunteer</strong>, Service Civil International (SCI)</p>
-            <p class="sub">Field work in the farm Vestri Pétursey, Iceland</p>
-          </li>
-          <li>
-            <p>07.2012 - 07.2012 | <strong>volunteer</strong>, Service Civil International (SCI)</p>
-            <p class="sub">Preservation of environment and ecology in the farm Hof Waldenstein, Switzerland</p>
-          </li>
-        </ul>
-        <h3>Selected Exhibitions</h3>
-        <ul>
-          <li>
-            <p>2017 | <strong>What's Happening in the Mastbos?</strong>, Naar Buiten Fair, Staatsbosbeheer, Breda, Netherlands</p>
-          </li>
-          <li>
-            <p>2017 | <strong>What's Happening in the Mastbos?</strong>, Graduation Exhibition of AKV|St. Joost, Den Bosch, Netherlands</p>
-          </li>
-          <li>
-            <p>2016 | <strong>Sinful Dark Chocolate Package Design</strong>, Nieuwe Lusten, Museum of the Image, Breda, Netherlands</p>
-          </li>
-          <li>
-            <p>2014 | <strong>Lares - Home Is Where the Heart Is</strong>, Graduation Exhibition of NTNU, Huashan 1914 Creative Park, Taipei, Taiwan</p>
-          </li>
-        </ul>
+
+      <div>
+        <h2 class="intro">Born in 1990, Taoyuan, Taiwan, Yi-Hsien Hung is a graphic designer, visual artist, illustrator based in the Netherlands.</h2>
+        <p class="quote">Yi-Hsien is experienced with illustration, watercolour painting, visual identity, packaging design, editorial design, typography, typeface design, web design, user interface design.</p>
+        <div class="cv">
+          <h3>Experience</h3>
+          <ul>
+            <li>
+              <p>2017 - present | <strong>design collaboration</strong>, Staatsbosbeheer</p>
+              <p class="sub">Designing map of forest</p>
+            </li>
+            <li>
+              <p>2014 - 2015 | <strong>assistant specialist (typeface design)</strong>, DynaComware</p>
+              <p class="sub">Designing Kanji typeface</p>
+            </li>
+            <li>
+              <p>2014 - 2014 | <strong>part-time employee</strong>, Department of Design, National Taiwan Normal University</p>
+              <p class="sub">Translation of the website of Department of Design (Chinese – English)</p>
+            </li>
+            <li>
+              <p>2013 - 2014 | <strong>part-time employee</strong>, Straits Design Talent Developing Project</p>
+              <p class="sub">Collecting and translating information about international design competitions (English – Chinese, German – Chinese)</p>
+              <p class="sub">Making registration instructions for international design competitions</p>
+            </li>
+            <li>
+              <p>2011 - 2012 | <strong>part-time employee</strong>, Department of Design, National Taiwan Normal University</p>
+              <p class="sub">Translation of design exhibitions and course structure</p>
+              <p class="sub">Office work</p>
+            </li>
+          </ul>
+          <h3>Education</h3>
+          <ul>
+            <li>
+              <p>2015 - 2017 | <strong>Master of Graphic Design</strong>, Akademie voor Kunst en Vormgeving St. Joost, Netherlands</p>
+            </li>
+            <li>
+              <p>2010 - 2014 | <strong>Bachelor of Fine Arts (Department of Design)</strong>, National Taiwan Normal University, Taiwan</p>
+            </li>
+            <li>
+              <p>2006 - 2008, 2009 - 2010 | <strong>Senior High School Diploma (Art specialised class)</strong>, National Yang-Ming Senior High School, Taiwan</p>
+            </li>
+            <li>
+              <p>2008 - 2009 | <strong>AS Level (Fine Art, Graphic Design, Mathematics, Geography)</strong>, Durham Sixth Form Centre, United Kingdom</p>
+            </li>
+          </ul>
+          <h3>Volunteer Experience</h3>
+          <ul>
+            <li>
+              <p>09.2017 - 10.2017 | <strong>volunteer</strong>, Service Civil International (SCI)</p>
+              <p class="sub">Field work in the farm Vestri Pétursey, Iceland</p>
+            </li>
+            <li>
+              <p>07.2012 - 07.2012 | <strong>volunteer</strong>, Service Civil International (SCI)</p>
+              <p class="sub">Preservation of environment and ecology in the farm Hof Waldenstein, Switzerland</p>
+            </li>
+          </ul>
+          <h3>Selected Exhibitions</h3>
+          <ul>
+            <li>
+              <p>2017 | <strong>What's Happening in the Mastbos?</strong>, Naar Buiten Fair, Staatsbosbeheer, Breda, Netherlands</p>
+            </li>
+            <li>
+              <p>2017 | <strong>What's Happening in the Mastbos?</strong>, Graduation Exhibition of AKV|St. Joost, Den Bosch, Netherlands</p>
+            </li>
+            <li>
+              <p>2016 | <strong>Sinful Dark Chocolate Package Design</strong>, Nieuwe Lusten, Museum of the Image, Breda, Netherlands</p>
+            </li>
+            <li>
+              <p>2014 | <strong>Lares - Home Is Where the Heart Is</strong>, Graduation Exhibition of NTNU, Huashan 1914 Creative Park, Taipei, Taiwan</p>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
 
