--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
           <a href="index.html"><img src="./resources/images/logo.png"/></a>
         </div>
 
+        <!-- button desktop -->
         <div class="button-desktop">
-            <a href="#"><div class="btn-portfolio">portfolio</div></a>
+            <div class="btn-portfolio">portfolio</div>
             <a href="index.html"><div class="btn-about-cv">about + cv</div></a>
-            <a href="#"><div class="btn-contact">contact</div></a>
+            <div class="btn-contact">contact</div>
             <div class="language"><a href"#"><span class="english">EN</span></a>/<a href"#"><span class="mandarin">TW</span></a></div>
         </div>
 
@@ -79,12 +80,12 @@
           <h3>Experience</h3>
           <ul>
             <li>
-              <p>2017 - present | <strong>design collaboration</strong>, Staatsbosbeheer</p>
+              <p>2017 - present | <strong>design collaboration</strong>, <a href="https://www.staatsbosbeheer.nl/" target="_blank">Staatsbosbeheer</a></p>
               <p class="sub">Designing map of forest</p>
             </li>
             <li>
-              <p>2014 - 2015 | <strong>assistant specialist (typeface design)</strong>, DynaComware</p>
-              <p class="sub">Designing Kanji typeface</p>
+              <p>2014 - 2015 | <strong>assistant specialist (typeface design)</strong>, <a href="https://www.dynacw.com/global-index.html" target="_blank">DynaComware</a></p>
+              <p class="sub">Designing <a href="http://www.dynacw.co.jp/FileUpload/Portals/file/DynaFontSample/KinbunGothic.pdf" target="_blank">Kanji typeface</a></p>
             </li>
             <li>
               <p>2014 - 2014 | <strong>part-time employee</strong>, Department of Design, National Taiwan Normal University</p>
