Edit tablet buttons

--- a/index.html
+++ b/index.html
@@ -35,19 +35,20 @@
 
         <!-- button desktop -->
         <div class="button-desktop">
-            <div class="btn-portfolio">portfolio</div>
-            <a href="index.html"><div class="btn-about-cv">about + cv</div></a>
-            <div class="btn-contact">contact</div>
+            <div class="btn-portfolio">Portfolio</div>
+            <a href="index.html"><div class="btn-about-cv">About + CV</div></a>
+            <div class="btn-contact">Contact</div>
             <div class="language"><a href"#"><span class="english">EN</span></a>/<a href"#"><span class="mandarin">TW</span></a></div>
         </div>
 
         <!-- button tablet -->
         <div class="button-tablet">
-            <a href="#"><div class="btn-portfolio-tablet">portfolio</div></a>
-            <a href="index.html"><div class="btn-about-cv-tablet">about + cv</div></a>
-            <a href="#"><div class="btn-contact-tablet">contact</div></a>
+            <a href="#"><div class="btn-portfolio-tablet">Portfolio</div></a>
+            <a href="index.html"><div class="btn-about-cv-tablet">About + CV</div></a>
+            <a href="#"><div class="btn-contact-tablet">Contact</div></a>
             <div class="language"><a href"#"><span class="english">EN</span></a>/<a href"#"><span class="mandarin">TW</span></a></div>
         </div>
+
     </header>
 
     <!-- pop-up -->
@@ -59,7 +60,22 @@
       <a href="mailto:yihsienhung@gmail.com"><h1>yihsienhung@gmail.com</h1></a>
     </div>
 
+    <div class="email-tablet">
+      <a href="mailto:yihsienhung@gmail.com"><h1>yihsienhung@gmail.com</h1></a>
+    </div>
+
     <div class="drop-menu">
+      <ul>
+        <li><a href="#">What’s Happening in the Mastbos?</a></li>
+        <li><a href="#">Down Manual</a></li>
+        <li><a href="#">Portfolio website</a></li>
+        <li><a href="#">Mysterious creatures in the forest</a></li>
+        <li><a href="#">Aria Sicura</a></li>
+        <li><a href="#">Watercolour Palette</a></li>
+      </ul>
+    </div>
+
+    <div class="drop-menu-tablet">
       <ul>
         <li><a href="#">What’s Happening in the Mastbos?</a></li>
         <li><a href="#">Down Manual</a></li>
