--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <!-- button desktop -->
         <div class="button-desktop">
-            <div class="btn-portfolio">Portfolio</div>
+            <a href="portfolio.html"><div class="btn-portfolio">Portfolio</div></a>
             <a href="index.html"><div class="btn-about-cv">About + CV</div></a>
             <div class="btn-contact">Contact</div>
             <div class="language"><a href"#"><span class="english">EN</span></a>/<a href"#"><span class="mandarin">TW</span></a></div>
@@ -43,7 +43,7 @@
 
         <!-- button tablet -->
         <div class="button-tablet">
-            <a href="#"><div class="btn-portfolio-tablet">Portfolio</div></a>
+            <a href="portfolio.html"><div class="btn-portfolio-tablet">Portfolio</div></a>
             <a href="index.html"><div class="btn-about-cv-tablet">About + CV</div></a>
             <a href="#"><div class="btn-contact-tablet">Contact</div></a>
             <div class="language"><a href"#"><span class="english">EN</span></a>/<a href"#"><span class="mandarin">TW</span></a></div>
