--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,7 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="resources/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
 
@@ -87,8 +88,15 @@
     </div>
 
     <!-- content -->
-    <section class="content">
-
+    <section class="container-fluid content">
+      <div class="row">
+        <div class="col-xs-12 col-md-3 project"></div>
+        <div class="col-xs-12 col-md-3 project"></div>
+        <div class="col-xs-12 col-md-3 project"></div>
+        <div class="col-xs-12 col-md-3 project"></div>
+        <div class="col-xs-12 col-md-3 project"></div>
+        <div class="col-xs-12 col-md-3 project"></div>
+      </div>
     </section>
 
     <!-- footer -->
