Edit project boxes

--- a/portfolio.html
+++ b/portfolio.html
@@ -90,12 +90,12 @@
     <!-- content -->
     <section class="container-fluid content">
       <div class="row">
-        <div class="col-xs-12 col-md-3 project"></div>
-        <div class="col-xs-12 col-md-3 project"></div>
-        <div class="col-xs-12 col-md-3 project"></div>
-        <div class="col-xs-12 col-md-3 project"></div>
-        <div class="col-xs-12 col-md-3 project"></div>
-        <div class="col-xs-12 col-md-3 project"></div>
+        <a href=""><div class="col-xs-6 col-md-3 project one"></div></a>
+        <div class="col-xs-6 col-md-3 project two"></div>
+        <div class="col-xs-6 col-md-3 project three"></div>
+        <div class="col-xs-6 col-md-3 project four"></div>
+        <div class="col-xs-6 col-md-3 project five"></div>
+        <div class="col-xs-6 col-md-3 project six"></div>
       </div>
     </section>
 
