Edit project boxes

--- a/portfolio.html
+++ b/portfolio.html
@@ -88,15 +88,15 @@
     </div>
 
     <!-- content -->
-    <section class="container-fluid content">
-      <div class="row">
-        <a href=""><div class="col-xs-6 col-md-3 project one"></div></a>
-        <div class="col-xs-6 col-md-3 project two"></div>
-        <div class="col-xs-6 col-md-3 project three"></div>
-        <div class="col-xs-6 col-md-3 project four"></div>
-        <div class="col-xs-6 col-md-3 project five"></div>
-        <div class="col-xs-6 col-md-3 project six"></div>
-      </div>
+    <section class="projects content">
+      <a href="#"><div class="project one"></div></a>
+      <a href="#"><div class="project one"></div></a>
+      <a href="#"><div class="project one"></div></a>
+      <a href="#"><div class="project one"></div></a>
+      <a href="#"><div class="project one"></div></a>
+      <a href="#"><div class="project one"></div></a>
+      <div class="project blank"></div>
+      <div class="project blank"></div>
     </section>
 
     <!-- footer -->
