Add boxes hover effect

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,8 +69,8 @@
       <ul>
         <li><a href="#">What’s Happening in the Mastbos?</a></li>
         <li><a href="#">Down Manual</a></li>
-        <li><a href="#">Portfolio website</a></li>
-        <li><a href="#">Mysterious creatures in the forest</a></li>
+        <li><a href="#">Portfolio Website</a></li>
+        <li><a href="#">Mysterious Creatures in the Forest</a></li>
         <li><a href="#">Aria Sicura</a></li>
         <li><a href="#">Watercolour Palette</a></li>
       </ul>
@@ -80,8 +80,8 @@
       <ul>
         <li><a href="#">What’s Happening in the Mastbos?</a></li>
         <li><a href="#">Down Manual</a></li>
-        <li><a href="#">Portfolio website</a></li>
-        <li><a href="#">Mysterious creatures in the forest</a></li>
+        <li><a href="#">Portfolio Website</a></li>
+        <li><a href="#">Mysterious Creatures in the Forest</a></li>
         <li><a href="#">Aria Sicura</a></li>
         <li><a href="#">Watercolour Palette</a></li>
       </ul>
@@ -89,12 +89,36 @@
 
     <!-- content -->
     <section class="projects content">
-      <a href="#"><div class="project one"></div></a>
-      <a href="#"><div class="project one"></div></a>
-      <a href="#"><div class="project one"></div></a>
-      <a href="#"><div class="project one"></div></a>
-      <a href="#"><div class="project one"></div></a>
-      <a href="#"><div class="project one"></div></a>
+      <a href="#">
+        <div class="project one">
+          <div class="name"><h3>What's Happening in the Mastbos?</h3></div>
+        </div>
+      </a>
+      <a href="#">
+        <div class="project one">
+          <div class="name"><h3>Down Manual</h3></div>
+        </div>
+      </a>
+      <a href="#">
+        <div class="project one">
+          <div class="name"><h3>Portfolio Website</h3></div>
+        </div>
+      </a>
+      <a href="#">
+        <div class="project one">
+          <div class="name"><h3>Mysterious creatures in the forest</h3></div>
+        </div>
+      </a>
+      <a href="#">
+        <div class="project one">
+          <div class="name"><h3>Aria Sicura</h3></div>
+        </div>
+      </a>
+      <a href="#">
+        <div class="project one">
+          <div class="name"><h3>Watercolour Palette</h3></div>
+        </div>
+      </a>
       <div class="project blank"></div>
       <div class="project blank"></div>
     </section>
