Edit mastbos page

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <div class="drop-menu">
       <ul>
-        <li><a href="#">What’s Happening in the Mastbos?</a></li>
+        <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
         <li><a href="#">Down Manual</a></li>
         <li><a href="#">Portfolio website</a></li>
         <li><a href="#">Mysterious creatures in the forest</a></li>
@@ -74,7 +74,7 @@
 
     <div class="drop-menu-tablet">
       <ul>
-        <li><a href="#">What’s Happening in the Mastbos?</a></li>
+        <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
         <li><a href="#">Down Manual</a></li>
         <li><a href="#">Portfolio website</a></li>
         <li><a href="#">Mysterious creatures in the forest</a></li>
@@ -94,7 +94,7 @@
           <ul>
             <li>
               <p>2017 - present | <strong>design collaboration</strong>, <a href="https://www.staatsbosbeheer.nl/" target="_blank">Staatsbosbeheer</a></p>
-              <p class="sub">Designing map of forest</p>
+              <p class="sub">Designing <a href="whats_happening_in_the_mastbos.html">map</a> of forest</p>
             </li>
             <li>
               <p>2014 - 2015 | <strong>assistant specialist (typeface design)</strong>, <a href="https://www.dynacw.com/global-index.html" target="_blank">DynaComware</a></p>
