--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
 
     <div class="drop-menu">
       <ul>
-        <li><a href="#">What’s Happening in the Mastbos?</a></li>
+        <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
         <li><a href="#">Down Manual</a></li>
         <li><a href="#">Portfolio Website</a></li>
         <li><a href="#">Mysterious Creatures in the Forest</a></li>
@@ -78,7 +78,7 @@
 
     <div class="drop-menu-tablet">
       <ul>
-        <li><a href="#">What’s Happening in the Mastbos?</a></li>
+        <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
         <li><a href="#">Down Manual</a></li>
         <li><a href="#">Portfolio Website</a></li>
         <li><a href="#">Mysterious Creatures in the Forest</a></li>
@@ -89,7 +89,8 @@
 
     <!-- content -->
     <section class="projects content">
-      <a href="#">
+      <!-- What's Happening in the Mastbos? -->
+      <a href="whats_happening_in_the_mastbos.html">
         <div class="project one">
           <div class="name"><h3>What's Happening in the Mastbos?</h3></div>
         </div>
