--- a/portfolio.html
+++ b/portfolio.html
@@ -67,21 +67,10 @@
 
     <div class="drop-menu">
       <ul>
-        <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
         <li><a href="#">Down Manual</a></li>
-        <li><a href="#">Portfolio Website</a></li>
-        <li><a href="#">Mysterious Creatures in the Forest</a></li>
-        <li><a href="#">Aria Sicura</a></li>
-        <li><a href="#">Watercolour Palette</a></li>
-      </ul>
-    </div>
-
-    <div class="drop-menu-tablet">
-      <ul>
+        <li><a href="#">Portfolio website</a></li>
         <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
-        <li><a href="#">Down Manual</a></li>
-        <li><a href="#">Portfolio Website</a></li>
-        <li><a href="#">Mysterious Creatures in the Forest</a></li>
+        <li><a href="#">Mysterious creatures in the forest</a></li>
         <li><a href="#">Aria Sicura</a></li>
         <li><a href="#">Watercolour Palette</a></li>
       </ul>
@@ -89,34 +78,39 @@
 
     <!-- content -->
     <section class="projects content">
+      <!-- Down Manual -->
+      <a href="#">
+        <div class="project six">
+          <div class="name"><h3>Down Manual</h3></div>
+        </div>
+      </a>
+      <!-- Portfolio Website -->
+      <a href="#">
+        <div class="project five">
+          <div class="name"><h3>Portfolio Website</h3></div>
+        </div>
+      </a>
       <!-- What's Happening in the Mastbos? -->
       <a href="whats_happening_in_the_mastbos.html">
         <div class="project one">
           <div class="name"><h3>What's Happening in the Mastbos?</h3></div>
         </div>
       </a>
+      <!-- Mysterious Creatures in the Forest -->
       <a href="#">
-        <div class="project one">
-          <div class="name"><h3>Down Manual</h3></div>
+        <div class="project two">
+          <div class="name"><h3>Mysterious Creatures in the Forest</h3></div>
         </div>
       </a>
+      <!-- Aria Sicura -->
       <a href="#">
-        <div class="project one">
-          <div class="name"><h3>Portfolio Website</h3></div>
-        </div>
-      </a>
-      <a href="#">
-        <div class="project one">
-          <div class="name"><h3>Mysterious creatures in the forest</h3></div>
-        </div>
-      </a>
-      <a href="#">
-        <div class="project one">
+        <div class="project three">
           <div class="name"><h3>Aria Sicura</h3></div>
         </div>
       </a>
+      <!-- Watercolour Palette -->
       <a href="#">
-        <div class="project one">
+        <div class="project four">
           <div class="name"><h3>Watercolour Palette</h3></div>
         </div>
       </a>
