--- a/whats_happening_in_the_mastbos.html
+++ b/whats_happening_in_the_mastbos.html
@@ -67,21 +67,10 @@
 
     <div class="drop-menu">
       <ul>
-        <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
         <li><a href="#">Down Manual</a></li>
-        <li><a href="#">Portfolio Website</a></li>
-        <li><a href="#">Mysterious Creatures in the Forest</a></li>
-        <li><a href="#">Aria Sicura</a></li>
-        <li><a href="#">Watercolour Palette</a></li>
-      </ul>
-    </div>
-
-    <div class="drop-menu-tablet">
-      <ul>
+        <li><a href="#">Portfolio website</a></li>
         <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
-        <li><a href="#">Down Manual</a></li>
-        <li><a href="#">Portfolio Website</a></li>
-        <li><a href="#">Mysterious Creatures in the Forest</a></li>
+        <li><a href="#">Mysterious creatures in the forest</a></li>
         <li><a href="#">Aria Sicura</a></li>
         <li><a href="#">Watercolour Palette</a></li>
       </ul>
