--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
         <li><a href="#">Down Manual</a></li>
         <li><a href="#">Portfolio website</a></li>
         <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
-        <li><a href="#">Mysterious creatures in the forest</a></li>
+        <li><a href="mysterious-creatures-in-the-forest.html">Mysterious Creatures in the Forest</a></li>
         <li><a href="#">Aria Sicura</a></li>
         <li><a href="#">Watercolour Palette</a></li>
       </ul>
@@ -97,7 +97,7 @@
         </div>
       </a>
       <!-- Mysterious Creatures in the Forest -->
-      <a href="#">
+      <a href="mysterious-creatures-in-the-forest.html">
         <div class="project two">
           <div class="name"><h3>Mysterious Creatures in the Forest</h3></div>
         </div>
