Edit creatures page

--- a/mysterious-creatures-in-the-forest.html
+++ b/mysterious-creatures-in-the-forest.html
@@ -83,15 +83,47 @@
       </div>
       <div class="text-box">
         <h3>Mysterious Creatures in the Forest</h3>
-        <p>Different from usual books, each of these booklets is non-identical. Apart from different book covers, the 'creatures' inside the booklets have their own characteristics; they have certain colours, width and height but they all have different appearance in different booklet. The booklets were the outcome of a Python learning project. The outcome was generated in Drawbot. A completely different booklet will be generated each time.</p>
+        <p>Different from conventional books, each of these booklets is non-identical. Apart from different book covers, the 'creatures' inside the booklets have their own characteristics; they have certain colours, width and height but they all have different appearance in different booklet. The booklets were the outcome of a Python learning project. The outcome was generated in <a href="http://www.drawbot.com/" target="_blank">Drawbot</a>. A completely different booklet will be generated each time.</p>
       </div>
-        <div class="carousel">
+
+      <div class="carousel">
         <div class="image-box">
           <img class="small" src="./resources/images/creatures-cover.png" alt="book cover"/>
         </div>
         <div class="image-box">
           <img class="small" src="./resources/images/creatures-inside.png" alt="book inside"/>
         </div>
+      </div>
+      <div class="caption">
+        <p>The following are examples of covers. (Scroll from left to right.)</p>
+      </div>
+      <div class="image-box">
+        <img src="./resources/images/creatures-covers1.png" alt="book covers"/>
+      </div>
+
+      <div class="caption">
+        <p>Examples of creatures.</p>
+      </div>
+      <div class="carousel-s">
+        <div class="image-box">
+          <img class="large" src="./resources/images/creatures-näätal.gif" alt="näätal"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/creatures-schöörange.gif" alt="schöörange"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/creatures-bonsaí.gif" alt="bonsaí"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/creatures-çanndow.gif" alt="çanndow"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/creatures-trööll.gif" alt="trööll"/>
+        </div>
+      </div>
+
+      <div class="text-box">
+        <p>The booklets were the outcome of a Python learning project. The outcome was generated in <a href="http://www.drawbot.com/" target="_blank">Drawbot</a>. A completely different booklet will be generated each time.</p>
       </div>
 
     </section>
