--- a/whats_happening_in_the_mastbos.html
+++ b/whats_happening_in_the_mastbos.html
@@ -79,7 +79,7 @@
     <!-- content -->
     <section class="content">
       <div>
-        <p class="quote">Infographic | Cartography | Illustration | Editorial Design</p>
+        <p class="quote">Information Design | Cartography | Illustration | Editorial Design</p>
       </div>
       <div class="text-box">
         <h3>What’s Happening in the Mastbos?</h3>
