modify umlaut names

--- a/mysterious-creatures-in-the-forest.html
+++ b/mysterious-creatures-in-the-forest.html
@@ -106,19 +106,19 @@
       </div>
       <div class="carousel-s">
         <div class="image-box">
-          <img class="large" src="./resources/images/creatures-näätal.gif" alt="näätal"/>
+          <img class="large" src="./resources/images/creatures-naatal.gif" alt="näätal"/>
         </div>
         <div class="image-box">
-          <img class="large" src="./resources/images/creatures-schöörange.gif" alt="schöörange"/>
+          <img class="large" src="./resources/images/creatures-schoorange.gif" alt="schöörange"/>
         </div>
         <div class="image-box">
-          <img class="large" src="./resources/images/creatures-bonsaí.gif" alt="bonsaí"/>
+          <img class="large" src="./resources/images/creatures-bonsai.gif" alt="bonsaí"/>
         </div>
         <div class="image-box">
-          <img class="large" src="./resources/images/creatures-çanndow.gif" alt="çanndow"/>
+          <img class="large" src="./resources/images/creatures-canndow.gif" alt="çanndow"/>
         </div>
         <div class="image-box">
-          <img class="large" src="./resources/images/creatures-trööll.gif" alt="trööll"/>
+          <img class="large" src="./resources/images/creatures-trooll.gif" alt="trööll"/>
         </div>
       </div>
 
