--- a/mysterious-creatures-in-the-forest.html
+++ b/mysterious-creatures-in-the-forest.html
@@ -54,7 +54,7 @@
 
     <!-- pop-up -->
     <div class="introduction">
-      <h1>Born in 1990, Taoyuan, Taiwan, Yi-Hsien Hung is a graphic designer, visual artist, illustrator based in the Netherlands.</h1>
+      <h1>Born in 1990, Taoyuan, Taiwan, Yi-Hsien Hung is a visual designer, visual artist, illustrator based in the Netherlands.</h1>
     </div>
 
     <div class="email">
@@ -71,8 +71,8 @@
         <li><a href="#">Portfolio website</a></li>
         <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
         <li><a href="mysterious-creatures-in-the-forest.html">Mysterious Creatures in the Forest</a></li>
-        <li><a href="#">Aria Sicura</a></li>
-        <li><a href="#">Watercolour Palette</a></li>
+        <li><a href="aria-sicura.html">Aria Sicura</a></li>
+        <li><a href="watercolour-palette.html">Watercolour Palette</a></li>
       </ul>
     </div>
 
@@ -83,7 +83,7 @@
       </div>
       <div class="text-box">
         <h3>Mysterious Creatures in the Forest</h3>
-        <p>Different from conventional books, each of these booklets is non-identical. Apart from different book covers, the 'creatures' inside the booklets have their own characteristics; they have certain colours, width and height but they all have different appearance in different booklet. The booklets were the outcome of a Python learning project. The outcome was generated in <a href="http://www.drawbot.com/" target="_blank">Drawbot</a>. A completely different booklet will be generated each time.</p>
+        <p>Different from conventional books, each of these booklets is non-identical. Apart from different book covers, the 'creatures' inside the booklets have their own characteristics; they have certain colours, width and height but they all have different appearance in different booklet.</p>
       </div>
 
       <div class="carousel">
