--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
 
     <!-- pop-up -->
     <div class="introduction">
-      <h1>Born in 1990, Taoyuan, Taiwan, Yi-Hsien Hung is a graphic designer, visual artist, illustrator based in the Netherlands.</h1>
+      <h1>Born in 1990, Taoyuan, Taiwan, Yi-Hsien Hung is a visual designer, visual artist, illustrator based in the Netherlands.</h1>
     </div>
 
     <div class="email">
@@ -71,8 +71,8 @@
         <li><a href="#">Portfolio website</a></li>
         <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
         <li><a href="mysterious-creatures-in-the-forest.html">Mysterious Creatures in the Forest</a></li>
-        <li><a href="#">Aria Sicura</a></li>
-        <li><a href="#">Watercolour Palette</a></li>
+        <li><a href="aria-sicura.html">Aria Sicura</a></li>
+        <li><a href="watercolour-palette.html">Watercolour Palette</a></li>
       </ul>
     </div>
 
@@ -103,13 +103,13 @@
         </div>
       </a>
       <!-- Aria Sicura -->
-      <a href="#">
+      <a href="aria-sicura.html">
         <div class="project three">
           <div class="name"><h3>Aria Sicura</h3></div>
         </div>
       </a>
       <!-- Watercolour Palette -->
-      <a href="#">
+      <a href="watercolour-palette.html">
         <div class="project four">
           <div class="name"><h3>Watercolour Palette</h3></div>
         </div>
