Modify email tablet

--- a/mysterious-creatures-in-the-forest.html
+++ b/mysterious-creatures-in-the-forest.html
@@ -95,7 +95,7 @@
         </div>
       </div>
       <div class="caption">
-        <p>The following are examples of covers. (Scroll from left to right.)</p>
+        <p>The following are examples of booklet covers. (Scroll from left to right.)</p>
       </div>
       <div class="image-box">
         <img src="./resources/images/creatures-covers1.png" alt="book covers"/>
@@ -104,7 +104,7 @@
       <div class="caption">
         <p>Examples of creatures.</p>
       </div>
-      <div class="carousel-s">
+      <div class="carousel-three">
         <div class="image-box">
           <img class="large" src="./resources/images/creatures-naatal.gif" alt="näätal"/>
         </div>
