Edit watercolour page

--- a/aria-sicura.html
+++ b/aria-sicura.html
@@ -83,7 +83,7 @@
       </div>
       <div class="text-box">
         <h3>Aria Sicura</h3>
-        <p><em>Aria Sicura</em> is a hypothetical Italian airway company. The flying price is suitable for family trips and also affordable for students. The company would like to give the audience the impression of friendly, playful and safe.</p>
+        <p><em>Aria Sicura</em> is a hypothetical Italian airway company. The flying price is suitable for family trips and also affordable for students. The company would like to give the customers the impression of friendly, playful and safe.</p>
       </div>
 
     </section>
