--- a/watercolour-palette.html
+++ b/watercolour-palette.html
@@ -86,6 +86,63 @@
         <p>Watercolour is one of the techniques which make paintings expressive and elegant at the same time. A painting can be an art work on its own; it can also be applied on many different applications, e.g. card, packaging, wall paper, book cover, illustration, etc.</p>
       </div>
 
+      <div class="gallery">
+        <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2015-4.png" alt="apple"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2015-2.png" alt="lemons"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2015-3.png" alt="oranges"/>
+        </div>
+      </div>
+
+      <div class="gallery">
+        <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2016-1.png" alt="hyacinth"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2015-5.png" alt="hyacinth"/>
+        </div>
+      </div>
+
+      <div class="gallery">
+        <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2016-2.png"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2017-5.png"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2017-4.png"/>
+        </div>
+      </div>
+
+      <div class="gallery">
+        <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2017-2.png"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2017-3.png"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2017-7.png"/>
+        </div>
+      </div>
+
+      <div class="gallery">
+        <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2017-11.png"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2017-12.png"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/watercolour-2017-13.png"/>
+        </div>
+      </div>
+
     </section>
 
     <!-- footer -->
