--- a/down-manual.html
+++ b/down-manual.html
@@ -79,11 +79,11 @@
     <!-- content -->
     <section class="content">
       <div>
-        <p class="quote">Visual Identity | User Manual | Editorial Design</p>
+        <p class="quote">Illustration | Editorial Design | User Manual</p>
       </div>
       <div class="text-box">
-        <h3>Aria Sicura</h3>
-        <p><em>Aria Sicura</em> is a hypothetical Italian airway company. The flying price is suitable for family trips and also affordable for students. The company would like to give the customers the impression of friendly, playful and safe.</p>
+        <h3>Down Manual</h3>
+        <p>Down Manual</p>
       </div>
 
     </section>
