--- a/web-design.html
+++ b/web-design.html
@@ -79,11 +79,11 @@
     <!-- content -->
     <section class="content">
       <div>
-        <p class="quote">Visual Identity | User Manual | Editorial Design</p>
+        <p class="quote">Web Design | User Interface Design | Responsive Design</p>
       </div>
       <div class="text-box">
-        <h3>Aria Sicura</h3>
-        <p><em>Aria Sicura</em> is a hypothetical Italian airway company. The flying price is suitable for family trips and also affordable for students. The company would like to give the customers the impression of friendly, playful and safe.</p>
+        <h3>Web Design</h3>
+        <p>Web Design</p>
       </div>
 
     </section>
