--- a/portfolio.html
+++ b/portfolio.html
@@ -67,8 +67,8 @@
 
     <div class="drop-menu">
       <ul>
-        <li><a href="#">Down Manual</a></li>
-        <li><a href="#">Portfolio website</a></li>
+        <li><a href="down-manual.html">Down Manual</a></li>
+        <li><a href="web-design.html">Web Design</a></li>
         <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
         <li><a href="mysterious-creatures-in-the-forest.html">Mysterious Creatures in the Forest</a></li>
         <li><a href="aria-sicura.html">Aria Sicura</a></li>
@@ -79,15 +79,15 @@
     <!-- content -->
     <section class="projects content">
       <!-- Down Manual -->
-      <a href="#">
+      <a href="down-manual.html">
         <div class="project six">
           <div class="name"><h3>Down Manual</h3></div>
         </div>
       </a>
-      <!-- Portfolio Website -->
-      <a href="#">
+      <!-- Web Design -->
+      <a href="web-design.html">
         <div class="project five">
-          <div class="name"><h3>Portfolio Website</h3></div>
+          <div class="name"><h3>Web Design</h3></div>
         </div>
       </a>
       <!-- What's Happening in the Mastbos? -->
