--- a/watercolour-palette.html
+++ b/watercolour-palette.html
@@ -67,8 +67,8 @@
 
     <div class="drop-menu">
       <ul>
-        <li><a href="#">Down Manual</a></li>
-        <li><a href="#">Portfolio website</a></li>
+        <li><a href="down-manual.html">Down Manual</a></li>
+        <li><a href="web-design.html">Web Design</a></li>
         <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
         <li><a href="mysterious-creatures-in-the-forest.html">Mysterious Creatures in the Forest</a></li>
         <li><a href="aria-sicura.html">Aria Sicura</a></li>
@@ -83,7 +83,7 @@
       </div>
       <div class="text-box">
         <h3>Watercolour Palette</h3>
-        <p>Watercolour is one of the techniques which make paintings expressive and elegant at the same time. A painting can be an art work on its own; it can also be applied on many different applications, e.g. card, packaging, wall paper, book cover, illustration, etc.</p>
+        <p>Watercolour is one of the techniques which make paintings expressive and elegant at the same time. A painting can be an art work on its own; it can also be applied on many different applications, e.g. card, packaging, wallpaper, book cover, illustration, etc.</p>
       </div>
 
       <div class="gallery">
