--- a/whats_happening_in_the_mastbos.html
+++ b/whats_happening_in_the_mastbos.html
@@ -67,8 +67,8 @@
 
     <div class="drop-menu">
       <ul>
-        <li><a href="#">Down Manual</a></li>
-        <li><a href="#">Portfolio website</a></li>
+        <li><a href="down-manual.html">Down Manual</a></li>
+        <li><a href="web-design.html">Web Design</a></li>
         <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
         <li><a href="mysterious-creatures-in-the-forest.html">Mysterious Creatures in the Forest</a></li>
         <li><a href="aria-sicura.html">Aria Sicura</a></li>
