Edit wed design page

--- a/web-design.html
+++ b/web-design.html
@@ -86,6 +86,39 @@
         <p>Web Design</p>
       </div>
 
+      <div class="gallery">
+        <div class="image-box">
+          <img class="large" src="./resources/images/website-fotomatic.gif" alt="Fotomatic"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/website-teacozy.gif" alt="Teacozy"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/website-portfolio.gif" alt="Portfolio"/>
+        </div>
+      </div>
+
+      <div class="gallery">
+        <div class="image-box">
+          <img class="large" src="./resources/images/website-jumpstart.gif" alt="Jumpstart"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/website-my-times.gif" alt="My Times"/>
+        </div>
+      </div>
+
+      <div class="gallery">
+        <div class="image-box">
+          <img class="large" src="./resources/images/website-secret-agent.gif" alt="Secret Agent"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/website-comaracademy.gif" alt="Comaracademy"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/website-optics.gif" alt="Optics"/>
+        </div>
+      </div>
+
     </section>
 
     <!-- footer -->
