--- a/web-design.html
+++ b/web-design.html
@@ -119,6 +119,10 @@
         </div>
       </div>
 
+      <div class="image-box">
+        <img src="./resources/images/web-design.gif" alt="Web Design"/>
+      </div>
+
     </section>
 
     <!-- footer -->
