Edis aria sicura page

--- a/aria-sicura.html
+++ b/aria-sicura.html
@@ -54,7 +54,7 @@
 
     <!-- pop-up -->
     <div class="introduction">
-      <h1>Born in 1990, Taoyuan, Taiwan, Yi-Hsien Hung is a visual designer, visual artist, illustrator based in the Netherlands.</h1>
+      <h1>Born in 1990, Taoyuan, Taiwan, Yi-Hsien Hung is a graphic designer, visual artist, illustrator based in the Netherlands.</h1>
     </div>
 
     <div class="email">
@@ -83,7 +83,63 @@
       </div>
       <div class="text-box">
         <h3>Aria Sicura</h3>
-        <p><em>Aria Sicura</em> is a hypothetical Italian airway company. The flying price is suitable for family trips and also affordable for students. The company would like to give the customers the impression of friendly, playful and safe.</p>
+        <p><em>Aria Sicura</em> is a hypothetical Italian airway company. The flying price is suitable for family trips and also affordable for students. The company would like to give the customers the impression of friendly, playful and safe. The rules of the identity were collected in an user manual.</p>
+      </div>
+
+      <div class="image-box">
+        <img src="./resources/images/aria-sicura-logo.png"/>
+      </div>
+
+      <div class="caption">
+        <p>The following are selected spreads from the user manual.</p>
+      </div>
+
+      <div class="background">
+        <div class="carousel">
+          <div class="image-box">
+            <img class="small" src="./resources/images/aria-sicura-manual-3.png" alt="User manual spread"/>
+          </div>
+          <div class="image-box">
+            <img class="small" src="./resources/images/aria-sicura-manual-1.png" alt="Logotype"/>
+          </div>
+          <div class="image-box">
+            <img class="small" src="./resources/images/aria-sicura-manual-2.png" alt="Logo"/>
+          </div>
+          <div class="image-box">
+            <img class="small" src="./resources/images/aria-sicura-manual-12.png" alt="User manual spread"/>
+          </div>
+          <div class="image-box">
+            <img class="small" src="./resources/images/aria-sicura-manual-13.png" alt="User manual spread"/>
+          </div>
+          <div class="image-box">
+            <img class="small" src="./resources/images/aria-sicura-manual-14.png" alt="User manual spread"/>
+          </div>
+          <div class="image-box">
+            <img class="small" src="./resources/images/aria-sicura-manual-18.png" alt="User manual spread"/>
+          </div>
+          <div class="image-box">
+            <img class="small" src="./resources/images/aria-sicura-manual-24.png" alt="User manual spread"/>
+          </div>
+          <div class="image-box">
+            <img class="small" src="./resources/images/aria-sicura-manual-25.png" alt="User manual spread"/>
+          </div>
+        </div>
+      </div>
+
+      <div class="caption">
+        <p>Examples of applications.</p>
+      </div>
+
+      <div class="gallery">
+        <div class="image-box">
+          <img class="large" src="./resources/images/aria-sicura-ad-2.png" alt="Ad"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/aria-sicura-ad-1.png" alt="Ad"/>
+        </div>
+        <div class="image-box">
+          <img class="large" src="./resources/images/aria-sicura-ad-3.png" alt="Ad"/>
+        </div>
       </div>
 
     </section>
