--- a/web-design.html
+++ b/web-design.html
@@ -54,7 +54,7 @@
 
     <!-- pop-up -->
     <div class="introduction">
-      <h1>Born in 1990, Taoyuan, Taiwan, Yi-Hsien Hung is a visual designer, visual artist, illustrator based in the Netherlands.</h1>
+      <h1>Born in 1990, Taoyuan, Taiwan, Yi-Hsien Hung is a graphic designer, visual artist, illustrator based in the Netherlands.</h1>
     </div>
 
     <div class="email">
@@ -83,7 +83,7 @@
       </div>
       <div class="text-box">
         <h3>Web Design</h3>
-        <p>Web Design</p>
+        <p>The following web pages were built with HTML, CSS and some jQuery.</p>
       </div>
 
       <div class="gallery">
