--- a/mysterious-creatures-in-the-forest.html
+++ b/mysterious-creatures-in-the-forest.html
@@ -54,7 +54,7 @@
 
     <!-- pop-up -->
     <div class="introduction">
-      <h1>Born in 1990, Taoyuan, Taiwan, Yi-Hsien Hung is a visual designer, visual artist, illustrator based in the Netherlands.</h1>
+      <h1>Born in 1990, Taoyuan, Taiwan, Yi-Hsien Hung is a graphic designer, visual artist, illustrator based in the Netherlands.</h1>
     </div>
 
     <div class="email">
@@ -94,6 +94,7 @@
           <img class="small" src="./resources/images/creatures-inside.png" alt="book inside"/>
         </div>
       </div>
+      
       <div class="caption">
         <p>The following are examples of booklet covers. (Scroll from left to right.)</p>
       </div>
