--- a/aria-sicura.html
+++ b/aria-sicura.html
@@ -90,6 +90,10 @@
         <img src="./resources/images/aria-sicura-logo.png"/>
       </div>
 
+      <div class="image-box">
+        <img class="large" src="./resources/images/aria-sicura-manual.png" alt="Manual"/>
+      </div>
+
       <div class="caption">
         <p>The following are selected spreads from the user manual.</p>
       </div>
