--- a/mysterious-creatures-in-the-forest.html
+++ b/mysterious-creatures-in-the-forest.html
@@ -94,11 +94,11 @@
           <img class="small" src="./resources/images/creatures-inside.png" alt="book inside"/>
         </div>
       </div>
-      
+
       <div class="caption">
         <p>The following are examples of booklet covers. (Scroll from left to right.)</p>
       </div>
-      <div class="image-box">
+      <div class="image-box-overflow">
         <img src="./resources/images/creatures-covers.png" alt="book covers"/>
       </div>
 
