--- a/web-design.html
+++ b/web-design.html
@@ -83,7 +83,7 @@
       </div>
       <div class="text-box">
         <h3>Web Design</h3>
-        <p>The following web pages were built with HTML, CSS and some jQuery.</p>
+        <p>The following web pages, including this portfolio website you are viewing, were built with HTML, CSS and some jQuery.</p>
       </div>
 
       <div class="gallery">
