Add page sinful dark chocolate

--- a/sinful-dark-chocolate.html
+++ b/sinful-dark-chocolate.html
@@ -78,51 +78,37 @@
     </div>
 
     <!-- content -->
-    <section class="projects content">
-      <!-- Down Manual -->
-      <a href="down-manual.html">
-        <div class="project six">
-          <div class="name"><h3>Down Manual</h3></div>
+    <section class="content">
+      <div>
+        <p class="quote">Packaging Design</p>
+      </div>
+      <div class="text-box">
+        <h3>Sinful Dark Chocolate</h3>
+        <p>Client: Museum of the Image<br/>Exhibition: Nieuwe Lusten<br/>Date: 2 April – 31 December 2016<br/>Location: Museum of the Image, Breda, Netherlands</p>
+      </div>
+
+      <div class="image-box">
+        <div>
+          <img src="./resources/images/sinful-figure.png"/>
         </div>
-      </a>
-      <!-- Web Design -->
-      <a href="web-design.html">
-        <div class="project five">
-          <div class="name"><h3>Web Design</h3></div>
+      </div>
+
+      <div class="text-box">
+        <p>Year 2016 was the year when Dutch painter Jheronimus Bosch turned 500 years old. To celebrate his birthday, a series of events and exhibitions were held. This package was designed as a part of the 'Nieuwe Lusten' exhibition in the Museum of the Image, Breda, Netherlands.</p>
+      </div>
+
+      <div class="image-box">
+        <div>
+          <img class="large" src="./resources/images/sinful.png"/>
         </div>
-      </a>
-      <!-- What's Happening in the Mastbos? -->
-      <a href="whats_happening_in_the_mastbos.html">
-        <div class="project one">
-          <div class="name"><h3>What's Happening in the Mastbos?</h3></div>
+      </div>
+
+      <div class="image-box">
+        <div>
+          <img class="large" src="./resources/images/sinful-print.png"/>
         </div>
-      </a>
-      <!-- Mysterious Creatures in the Forest -->
-      <a href="mysterious-creatures-in-the-forest.html">
-        <div class="project two">
-          <div class="name"><h3>Mysterious Creatures in the Forest</h3></div>
-        </div>
-      </a>
-      <!-- Sinful Dark Chocolate -->
-      <a href="sinful-dark-chocolate.html">
-        <div class="project seven">
-          <div class="name"><h3>Sinful Dark Chocolate</h3></div>
-        </div>
-      </a>
-      <!-- Aria Sicura -->
-      <a href="aria-sicura.html">
-        <div class="project three">
-          <div class="name"><h3>Aria Sicura</h3></div>
-        </div>
-      </a>
-      <!-- Watercolour Palette -->
-      <a href="watercolour-palette.html">
-        <div class="project four">
-          <div class="name"><h3>Watercolour Palette</h3></div>
-        </div>
-      </a>
-      <div class="project blank"></div>
-      <div class="project blank"></div>
+      </div>
+
     </section>
 
     <!-- footer -->
