--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <li><a href="web-design.html">Web Design</a></li>
         <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
         <li><a href="mysterious-creatures-in-the-forest.html">Mysterious Creatures in the Forest</a></li>
+        <li><a href="sinful-dark-chocolate.html">Sinful Dark Chocolate</a></li>
         <li><a href="aria-sicura.html">Aria Sicura</a></li>
         <li><a href="watercolour-palette.html">Watercolour Palette</a></li>
       </ul>
@@ -77,7 +78,7 @@
 
       <div>
         <h2 class="intro">Born in 1990, Taoyuan, Taiwan, Yi-Hsien Hung is a graphic designer, visual artist, illustrator based in the Netherlands.</h2>
-        <p class="quote">Yi-Hsien is experienced with illustration, watercolour painting, visual identity, packaging design, editorial design, typography, typeface design, web design, user interface design.</p>
+        <p class="quote">Yi-Hsien is experienced with illustration, watercolour painting, visual identity, packaging design, editorial design, typography, web design, user interface design.</p>
         <div class="cv">
           <h3>Experience</h3>
           <ul>
@@ -133,13 +134,13 @@
           <h3>Selected Exhibitions</h3>
           <ul>
             <li>
-              <p>2017 | <strong>What's Happening in the Mastbos?</strong>, Naar Buiten Fair, Staatsbosbeheer, Breda, Netherlands</p>
+              <p>2017 | <strong><a href="whats_happening_in_the_mastbos.html">What's Happening in the Mastbos?</a></strong>, Naar Buiten Fair, Staatsbosbeheer, Breda, Netherlands</p>
             </li>
             <li>
-              <p>2017 | <strong>What's Happening in the Mastbos?</strong>, Graduation Exhibition of AKV|St. Joost, Den Bosch, Netherlands</p>
+              <p>2017 | <strong><a href="whats_happening_in_the_mastbos.html">What's Happening in the Mastbos?</a></strong>, Graduation Exhibition of AKV|St. Joost, Den Bosch, Netherlands</p>
             </li>
             <li>
-              <p>2016 | <strong>Sinful Dark Chocolate Package Design</strong>, Nieuwe Lusten, Museum of the Image, Breda, Netherlands</p>
+              <p>2016 | <strong><a href="sinful-dark-chocolate.html">Sinful Dark Chocolate</a> Packaging Design</strong>, Nieuwe Lusten, Museum of the Image, Breda, Netherlands</p>
             </li>
             <li>
               <p>2014 | <strong>Lares - Home Is Where the Heart Is</strong>, Graduation Exhibition of NTNU, Huashan 1914 Creative Park, Taipei, Taiwan</p>
