--- a/portfolio.html
+++ b/portfolio.html
@@ -71,6 +71,7 @@
         <li><a href="web-design.html">Web Design</a></li>
         <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
         <li><a href="mysterious-creatures-in-the-forest.html">Mysterious Creatures in the Forest</a></li>
+        <li><a href="milk-carton-redesign.html">Milk Carton Re-design</a></li>
         <li><a href="sinful-dark-chocolate.html">Sinful Dark Chocolate</a></li>
         <li><a href="aria-sicura.html">Aria Sicura</a></li>
         <li><a href="watercolour-palette.html">Watercolour Palette</a></li>
@@ -104,6 +105,12 @@
         </div>
       </a>
       <!-- Sinful Dark Chocolate -->
+      <a href="milk-carton-redesign.html">
+        <div class="project eight">
+          <div class="name"><h3>Milk Carton Re-design</h3></div>
+        </div>
+      </a>
+      <!-- Sinful Dark Chocolate -->
       <a href="sinful-dark-chocolate.html">
         <div class="project seven">
           <div class="name"><h3>Sinful Dark Chocolate</h3></div>
@@ -121,6 +128,7 @@
           <div class="name"><h3>Watercolour Palette</h3></div>
         </div>
       </a>
+      <div class="project blank"></div>
       <div class="project blank"></div>
       <div class="project blank"></div>
     </section>
