--- a/down-manual.html
+++ b/down-manual.html
@@ -85,7 +85,7 @@
       </div>
       <div class="text-box">
         <h3>Down Manual</h3>
-        <p>Client: <a href="http://www.bredaphoto.nl/" target="_blank">BredaPhoto Festival</a> 2018 / <a href="https://www.shengwenlo.com/" target="_blank">Sheng-Wen Lo</a></p>
+        <p>Client: <a href="http://www.bredaphoto.nl/" target="_blank">BredaPhoto Festival</a> 2018 / <a href="https://www.shengwenlo.com/down" target="_blank">Sheng-Wen Lo</a></p>
       </div>
 
     </section>
