Modify milk texts

--- a/milk-carton-redesign.html
+++ b/milk-carton-redesign.html
@@ -81,12 +81,13 @@
     <!-- content -->
     <section class="content">
       <div>
-        <p class="quote">Illustration | Packaging Design</p>
+        <p class="quote">Illustration | Packaging Design | Information Design</p>
       </div>
 
       <div class="text-box">
         <h3>Milk Carton Re-design</h3>
         <p>Client: <a href="https://www.campina.nl/" target="_blank">Campina</a> / <a href="https://www.shengwenlo.com/melk/" target="_blank">Sheng-Wen Lo</a></p>
+        <p>This is a proposal of a redesign of halfvolle melk carton.</p>
       </div>
 
       <div class="image-box">
@@ -94,7 +95,6 @@
       </div>
 
       <div class="text-box">
-        <p>This is a proposal of a redesign of halfvolle melk carton.</p>
         <p>The original design of the halfvolle melk carton provides information to the potential buyers: nutrition fact, health benefit of milk, customer service phone number, address, website, etc. But for some reasons, I would like to redesign this milk carton:</p>
         <ol>
           <li>The original carton provides consumers a lot of information in texts, which do not normally catch consumers’ eyes.</li>
