--- a/aria-sicura.html
+++ b/aria-sicura.html
@@ -71,6 +71,9 @@
         <li><a href="web-design.html">Web Design</a></li>
         <li><a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos?</a></li>
         <li><a href="mysterious-creatures-in-the-forest.html">Mysterious Creatures in the Forest</a></li>
+        <li><a href="milk-carton-redesign.html">Milk Carton Re-design</a></li>
+        <li><a href="ritek-solar.html">Ritek Solar</a></li>
+        <li><a href="sinful-dark-chocolate.html">Sinful Dark Chocolate</a></li>
         <li><a href="aria-sicura.html">Aria Sicura</a></li>
         <li><a href="watercolour-palette.html">Watercolour Palette</a></li>
       </ul>
