--- a/ritek-solar.html
+++ b/ritek-solar.html
@@ -80,64 +80,27 @@
     </div>
 
     <!-- content -->
-    <section class="projects content">
-      <!-- Down Manual -->
-      <a href="down-manual.html">
-        <div class="project six">
-          <div class="name"><h3>Down Manual</h3></div>
-        </div>
-      </a>
-      <!-- Web Design -->
-      <a href="web-design.html">
-        <div class="project five">
-          <div class="name"><h3>Web Design</h3></div>
-        </div>
-      </a>
-      <!-- What's Happening in the Mastbos? -->
-      <a href="whats_happening_in_the_mastbos.html">
-        <div class="project one">
-          <div class="name"><h3>What's Happening in the Mastbos?</h3></div>
-        </div>
-      </a>
-      <!-- Mysterious Creatures in the Forest -->
-      <a href="mysterious-creatures-in-the-forest.html">
-        <div class="project two">
-          <div class="name"><h3>Mysterious Creatures in the Forest</h3></div>
-        </div>
-      </a>
-      <!-- Milk Carton Re-design -->
-      <a href="milk-carton-redesign.html">
-        <div class="project eight">
-          <div class="name"><h3>Milk Carton Re-design</h3></div>
-        </div>
-      </a>
-      <!-- Ritek Solar -->
-      <a href="ritek-solar.html">
-        <div class="project nine">
-          <div class="name"><h3>Ritek Solar</h3></div>
-        </div>
-      </a>
-      <!-- Sinful Dark Chocolate -->
-      <a href="sinful-dark-chocolate.html">
-        <div class="project seven">
-          <div class="name"><h3>Sinful Dark Chocolate</h3></div>
-        </div>
-      </a>
-      <!-- Aria Sicura -->
-      <a href="aria-sicura.html">
-        <div class="project three">
-          <div class="name"><h3>Aria Sicura</h3></div>
-        </div>
-      </a>
-      <!-- Watercolour Palette -->
-      <a href="watercolour-palette.html">
-        <div class="project four">
-          <div class="name"><h3>Watercolour Palette</h3></div>
-        </div>
-      </a>
-      <div class="project blank"></div>
-      <div class="project blank"></div>
-      <div class="project blank"></div>
+    <section class="content">
+      <div>
+        <p class="quote">Editorial Design | Product Information Sheet</p>
+      </div>
+      <div class="text-box">
+        <h3>Ritek Solar</h3>
+        <p>Client: <a href="https://www.rits-solar.com/index.php/newsevents/news-2016" target="_blank">RiTS Solar B.V.</a><br/>Exhibition: Intersolar<br/>Date: 22 – 24 June 2016<br/>Location: Messe München, Germany</p>
+      </div>
+
+      <div class="caption">
+        <p>The double-sided product information sheet was designed for the exhibition.</p>
+      </div>
+
+      <div class="image-box">
+        <img src="./resources/images/ritek-1.png"/>
+      </div>
+
+      <div class="image-box">
+        <img src="./resources/images/ritek-2.png"/>
+      </div>
+
     </section>
 
     <!-- footer -->
