--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 
     <!-- pop-up -->
     <div class="email">
-      <a href="mailto:yihsienhung@gmail.com"><h1>yihsienhung@gmail.com</h1></a>
+      <a href="mailto:info@yihsienhung.com"><h1>info@yihsienhung.com</h1></a>
     </div>
 
     <div class="email-tablet">
-      <a href="mailto:yihsienhung@gmail.com"><h1>yihsienhung@gmail.com</h1></a>
+      <a href="mailto:info@yihsienhung.com"><h1>info@yihsienhung.com</h1></a>
     </div>
 
     <div class="drop-menu">
