--- a/whats_happening_in_the_mastbos.html
+++ b/whats_happening_in_the_mastbos.html
@@ -58,11 +58,11 @@
     </div>
 
     <div class="email">
-      <a href="mailto:yihsienhung@gmail.com"><h1>yihsienhung@gmail.com</h1></a>
+      <a href="mailto:info@yihsienhung.com"><h1>info@yihsienhung.com</h1></a>
     </div>
 
     <div class="email-tablet">
-      <a href="mailto:yihsienhung@gmail.com"><h1>yihsienhung@gmail.com</h1></a>
+      <a href="mailto:info@yihsienhung.com"><h1>info@yihsienhung.com</h1></a>
     </div>
 
     <div class="drop-menu">
